# SummerAIChallenge

./: .env  day1_kaggle_scikit_learn.ipynb  main.py  pyproject.toml  requirements.txt
Day1/: day1_kaggle_scikit_learn.ipynb
Day2/: model_validation.ipynb  overfitting_underfitting.ipynb  random_forests.ipynb  train.ipynb
Day3/: transformers.ipynb
LangChain/: 1-langchain-intro.ipynb  2-streaming-amnd-batch.ipynb  3-tools.ipynb  4-messages.ipynb
