[project]
name = "summeraichallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-mistralai>=1.1.5",
    "langchain-nvidia-ai-endpoints>=1.4.2",
    "python-dotenv>=1.2.2",
]
